--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,15 @@
 *{
-    margin:0;
+    margin: 0;
     padding:0;
 }
 
-header
-{}
+.header
+{
+    
+    background-color:#f2ffcc;
+   display:block;
+    margin: 10px;
+    border: 10px;
+    padding: 20px;
+
+}
