added a 1500px toheigh for .leftside

--- a/assets/style.css
+++ b/assets/style.css
@@ -35,8 +35,10 @@
 .leftside{
     
     width: 369px;
+    height:1500px;
     background-color: #104c59;
     border-radius: 51px;
+    
     
 }
 .myimage
