--- a/assets/style.css
+++ b/assets/style.css
@@ -7,17 +7,16 @@
 {
     
     background-color:#f2ffcc;
-   display:block;
+   display:flex;
     margin: 0px;
     border: 0px;
     padding: 0px;
     border-radius: 122px;
+    justify-content: flex-end;
     
 
 }
-.h1{
 
-}
 .signature
 {
     display:block;
@@ -28,7 +27,17 @@
 }
 .nav
 {
-    text-align: left;
+    display:flex;
+    
+    flex-direction: row;
+    justify-content:flex-end;
+    align-items: center;
+}
+.link
+{
+    padding: 20px;
+    margin:28px;
+
 }
 
 
