--- a/assets/style.css
+++ b/assets/style.css
@@ -28,10 +28,9 @@
 .nav
 {
     display:flex;
-    
     flex-direction: row;
-    justify-content:flex-end;
     align-items: center;
+    height:88px;
 }
 .link
 {
