added height to myimage

--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,7 @@
     padding: 0px;
     border-radius: 122px;
     justify-content: flex-end;
+    height:165px;
     
 
 }
@@ -53,5 +54,6 @@
 {
     margin:0%;
     border-radius: 800px;
+    height:331px;
 
 }
