--- a/assets/style.css
+++ b/assets/style.css
@@ -26,24 +26,40 @@
     border-radius: 5000px;
 
 }
-.nav
+
+.title
 {
     display:flex;
     height:102px;
     flex-wrap: nowrap;
     
-    flex-direction: row-reverse;
-    align-items: center;
+    flex-direction: row;
+    align-items:flex-end;
     
     
     height:102px;
 }
-.link
+
+.nav
 {
-    padding: 20px;
-    margin:28px;
+
+    display:flex;
+    height:62px;
+    flex-wrap: nowrap;
+justify-content: center;
+    align-items: center;
+    
+}
+
+#link
+{
+    display:flex;
+    flex-wrap: wrap;
+    width:86px;
 
 }
+
+
 
 .backround
 {
