--- a/assets/style.css
+++ b/assets/style.css
@@ -83,7 +83,7 @@ main{}
     height:500px;
     background-color: lightblue;
     display:flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: flex-end;
     float: right;
     flex-direction: column;
@@ -93,22 +93,28 @@ main{}
 
 
 #aboutme  
-{ width: 465px;
+{ width: 1075px;
     height:100px;
     background-color: greenyellow;
     border-radius: 51px;
 }
 
-h3 , h4
-{font-size:101px ;}
 
+h3
+{font-size:60px; height:134px;}
 
+#p1 
+ {font-size:36px;
+line-height:61px;}
 
-
+ 
 #work
 {
-    width: 150px;
+    width: 975px;
     height:100px;
     background-color: greenyellow;
     border-radius: 51px;
 }
+
+.pws
+{}
