--- a/assets/style.css
+++ b/assets/style.css
@@ -50,11 +50,16 @@ main{
 
 .leftside{
     
-    position:fixed;
+    position:absolute;
     width: 432px;
-    height:711px;
+    height:776px;
     background-image: url("rightside.jpg");
     border-radius: 51px;
+    text-align: center;
+    display:flex;
+    flex-direction:column;
+    flex-wrap: nowrap;
+    justify-content: space-around;
     
     
     
@@ -64,12 +69,14 @@ main{
 { 
     margin:0%;
     border-radius: 200mm;
-    height:331px;
+    height:415px;
 
 }
 
 
 #contactme {}
+
+
 
 .contact
 {
@@ -77,6 +84,10 @@ main{
     width:67px;
 
 }
+
+#leftlink{color:#104c59;
+    text-shadow: 1px 1px 10px;
+    text-decoration: none;}
 
 #resume{}
 
@@ -98,7 +109,7 @@ main{
 #aboutme  
 { width: 1075px;
     height:100px;
-    background-image:url("rightside.jpg");
+    background-image:url("backroundbricks.jpg");
     border-radius: 51px;
 }
 
@@ -115,7 +126,7 @@ line-height:61px;}
 {
     width: 975px;
     height:100px;
-    background-image:url("rightside.jpg") ;
+    background-image:url("backroundbricks.jpg") ;
     border-radius: 51px;
 }
 .box{}
